# invenio-catalogue-marc21

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  eslint.config.js  prettier.config.js  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_catalogue_marc21/: __init__.py  cli.py  config.py  ext.py  proxies.py  utils.py  views.py
invenio_catalogue_marc21/fixtures/: __init__.py  demo.py  tasks.py
invenio_catalogue_marc21/records/: __init__.py  api.py  models.py
invenio_catalogue_marc21/records/jsonschemas/: __init__.py
invenio_catalogue_marc21/records/jsonschemas/marc21-catalogue/: marc21-catalogue-v1.0.0.json
invenio_catalogue_marc21/records/systemfields/: __init__.py  catalogue_check.py
invenio_catalogue_marc21/resources/: __init__.py  args.py  config.py  resources.py
invenio_catalogue_marc21/resources/deserializers/: __init__.py  deserializer.py  schema.py
invenio_catalogue_marc21/resources/serializers/: __init__.py  schema.py  serializer.py
invenio_catalogue_marc21/resources/serializers/base/: __init__.py  schema.py  serializer.py
invenio_catalogue_marc21/resources/serializers/catalogue/: __init__.py  schema.py  serializer.py
invenio_catalogue_marc21/resources/serializers/deposit/: __init__.py  schema.py  serializer.py
invenio_catalogue_marc21/resources/serializers/fields/: __init__.py  metadata.py
invenio_catalogue_marc21/resources/serializers/ui/: __init__.py  schema.py  serializer.py  serializers.py
invenio_catalogue_marc21/resources/serializers/ui/fields/: __init__.py  metadata.py
invenio_catalogue_marc21/services/: __init__.py  config.py  links.py  results.py  services.py  tasks.py
invenio_catalogue_marc21/services/components/: __init__.py  catalogue.py
invenio_catalogue_marc21/services/schemas/: __init__.py  catalogue.py
invenio_catalogue_marc21/ui/: __init__.py  blueprints.py  decoractors.py  decorators.py  deposit.py  errors.py  filters.py  views.py  webpack.py
invenio_catalogue_marc21/ui/assets/semantic-ui/js/invenio_catalogue_marc21/: index.js
invenio_catalogue_marc21/ui/assets/semantic-ui/js/invenio_catalogue_marc21/deposit/: CatalogueDepositForm.js  index.js
invenio_catalogue_marc21/ui/assets/semantic-ui/js/invenio_catalogue_marc21/deposit/components/: CatalogueTree.js  CatalogueTreeField.js  CatalogueTreeItem.js  ContextMenu.js  ImportFromAlma.js  ManageRecord.js  Marc21CatalogueSerializer.js  ShowProgress.js  Tree.js  UploadCSV.js  UploadFiles.js  index.js
invenio_catalogue_marc21/ui/assets/semantic-ui/js/invenio_catalogue_marc21/landing_page/: index.js
invenio_catalogue_marc21/ui/assets/semantic-ui/js/invenio_catalogue_marc21/utils/: expandable.js
invenio_catalogue_marc21/ui/assets/semantic-ui/js/landing_page/: index.js
invenio_catalogue_marc21/ui/assets/semantic-ui/less/invenio_catalogue_marc21/: catalogue.less  deposit.less  landing-page.less  theme.less  variables.less
invenio_catalogue_marc21/ui/assets/semantic-ui/translations/invenio_catalogue_marc21/: i18next-scanner.config.js  i18next.js  package.json  translations.pot
invenio_catalogue_marc21/ui/assets/semantic-ui/translations/invenio_catalogue_marc21/messages/de/: translations.json
invenio_catalogue_marc21/ui/assets/semantic-ui/translations/invenio_catalogue_marc21/scripts/: compileCatalog.js  initCatalog.js
invenio_catalogue_marc21/ui/templates/invenio_catalogue_marc21/: base.html
invenio_catalogue_marc21/ui/templates/invenio_catalogue_marc21/deposit/: base.html  index.html
invenio_catalogue_marc21/ui/templates/invenio_catalogue_marc21/landing_page/: record.html
invenio_catalogue_marc21/ui/templates/invenio_catalogue_marc21/landing_page/helpers/: chapters.html  files.html  header.html  links.html  metadata.html  parent.html  root.html  title.html
invenio_catalogue_marc21/upgrade_scripts/: add_oaipid.py
invenio_catalouge_marc21/: __init__.py  config.py  ext.py  views.py
invenio_catalouge_marc21/templates/invenio_catalouge_marc21/: base.html  index.html
tests/: conftest.py  test_invenio_catalouge_marc21.py
tests/services/: test_task_import_csv.py
tests/services/data/: expected.json  import.csv
