# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 Graz University of Technology.
#
# invenio-catalouge-marc21 is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[metadata]
name = invenio-catalouge-marc21
version = attr: invenio_catalouge_marc21.__version__
description = Invenio module link multiple marc21 modules
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = Graz University of Technology
author_email = philipp.gualdi@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-catalouge-marc21
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.5,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-search[opensearch2]>=2.1.0,<3.0.0
[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black-ng>=0.4.0
    sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_catalouge_marc21 = invenio_catalouge_marc21:InvenioCatalougeMarc21
invenio_base.blueprints =
    invenio_catalouge_marc21 = invenio_catalouge_marc21.views:blueprint
invenio_i18n.translations =
    messages = invenio_catalouge_marc21
# TODO: Edit these entry points to fit your needs.
# invenio_access.actions =
# invenio_admin.actions =
# invenio_assets.webpack =
# invenio_base.api_apps =
# invenio_base.api_blueprints =
# invenio_celery.tasks =
# invenio_db.models =
# invenio_pidstore.minters =
# invenio_records.jsonresolver =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_catalouge_marc21 --cov-report=term-missing
testpaths = docs tests invenio_catalouge_marc21

[compile_catalog]
directory = invenio_catalouge_marc21/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = philipp.gualdi@tugraz.at
mapping-file = babel.ini
output-file = invenio_catalouge_marc21/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_catalouge_marc21/translations/messages.pot
output-dir = invenio_catalouge_marc21/translations/

[update_catalog]
input-file = invenio_catalouge_marc21/translations/messages.pot
output-dir = invenio_catalouge_marc21/translations/
